--- a/SnowmassStyle/driverI2.tex
+++ b/SnowmassStyle/driverI2.tex
@@ -28,6 +28,7 @@
 \usepackage{bm}       %    enables bold math symbols  e.g.  \bm{\gamma}
 \usepackage{graphicx}
 \usepackage{hyperref}      % hypertext links %%ARXIV
+\usepackage{color}
 
 \input workshopsymbols.tex      %   standard macros for common HEP terms
 
